--- a/hack/devcontainer/Dockerfile
+++ b/hack/devcontainer/Dockerfile
@@ -29,7 +29,8 @@ RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing/" >> /etc/apk/reposi
 RUN sed -ie '/^root:/ s#:/bin/.*$#:/bin/zsh#' /etc/passwd
 
 # Add Oh-my-zsh and plugins. Create user skeleton that includes it
-RUN git clone --quiet --depth 1 https://github.com/ohmyzsh/ohmyzsh.git /usr/share/oh-my-zsh && \
+RUN --mount=type=bind,target=/conf \
+    git clone --quiet --depth 1 https://github.com/ohmyzsh/ohmyzsh.git /usr/share/oh-my-zsh && \
     sed -i -e 's#^export ZSH=.*#export ZSH=/usr/share/oh-my-zsh#g' /usr/share/oh-my-zsh/templates/zshrc.zsh-template && \
     git clone --quiet --depth=1 https://github.com/romkatv/powerlevel10k.git /usr/share/oh-my-zsh/custom/themes/powerlevel10k && \
     git clone --quiet --depth=1  https://github.com/zsh-users/zsh-autosuggestions "/usr/share/oh-my-zsh/custom/plugins/zsh-autosuggestions" && \
@@ -39,7 +40,7 @@ RUN git clone --quiet --depth 1 https://github.com/ohmyzsh/ohmyzsh.git /usr/shar
     echo '[[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh' >> /usr/share/oh-my-zsh/templates/zshrc.zsh-template && \
     mkdir -p /etc/skel && \
     install -m 700 -o root -g root /usr/share/oh-my-zsh/templates/zshrc.zsh-template /etc/skel/.zshrc  && \
-    wget -O /etc/skel/.p10k.zsh https://raw.githubusercontent.com/kaweezle/iknite/refs/heads/main/rootfs/p10k.zsh && \
+    install -m 600 -o root -g root /conf/p10k.zsh /etc/skel/.p10k.zsh && \
     install --directory -o root -g root -m 0700 /etc/skel/.ssh && \
     touch /etc/subuid && touch /etc/subgid
 
