--- a/packaging/rootfs/with-images/Dockerfile
+++ b/packaging/rootfs/with-images/Dockerfile
@@ -4,7 +4,7 @@ ARG IKNITE_VERSION=0.5.3-devel
 ARG KUBERNETES_VERSION=1.34.3
 ARG ALPINE_VERSION=3.23
 
-ADD ./iknite.rootfs.tar.gz /
+ADD ./iknite-${IKNITE_VERSION}-${KUBERNETES_VERSION}.rootfs.tar.gz /
 LABEL org.opencontainers.image.source="https://github.com/kaweezle/iknite.git"
 LABEL org.opencontainers.image.description="Iknite ${IKNITE_VERSION} on Alpine ${ALPINE_VERSION} with Kubernetes ${KUBERNETES_VERSION} support"
 LABEL org.opencontainers.image.flavor="Alpine"
