--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -109,4 +109,4 @@ nfpms:
         key_name: kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
 release:
   extra_files:
-    - glob: ./rootfs/kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
+    - glob: ./packaging/rootfs/base/kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
