✨Create a developer tools command
- Created a go workspace file to separate the iknitedev command from
  iknite.
- Created the command infrastructure with Cobra.
- Created a first command `install signing-key`.
- Removed the outdated install-signing-key.sh script that extracted the
  APK signing key from a SOPS encrypted secrets file.
- Updated the make-rootfs-devenv.sh script to reflect the new method
  for installing the signing key using the iknitedev command.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,10 @@ repos:
         #   )$
       - id: check-merge-conflict
       - id: detect-private-key
+        exclude: |
+          (?x)^(
+              hack/iknitedev/cmd/install_signing_key_test\.go
+          )$
       - id: check-added-large-files
         args: ["--maxkb=10240"] # 10 MB
 
