✅Removed testify suite usage

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,6 +8,12 @@
       }
     },
     {
+      "files": ".github/instructions/*.md",
+      "options": {
+        "embeddedLanguageFormatting": "off"
+      }
+    },
+    {
       "files": "*.md",
       "options": {
         "proseWrap": "always"
