🚑Error in local-path-config patch

--- a/pkg/provision/base/kustomization.yaml
+++ b/pkg/provision/base/kustomization.yaml
@@ -24,7 +24,7 @@ patches:
   - patch: |-
       - op: replace
         path: /data
-        value: |
+        value:
           config.json: |-
             {
                     "nodePathMap":[
