✨Implement GitHub Configuration Module with Deploy Keys, and Webhooks

--- a/deploy/iac/iknite/secrets.sops.yaml
+++ b/deploy/iac/iknite/secrets.sops.yaml
@@ -55,6 +55,9 @@ cloudflare:
         secret_access_key: ENC[AES256_GCM,data:tHoRhedfgyqanZPu/sZAc9/I2O87kWL++OeQ6Ux+Q1eiLEeCGGdlaTV8frEPEjNnnJXlIs4oTs6qYxqcRI1NdQ==,iv:jU9s7QF9Ww9WS0/1wLIWrr5Zd3lrFtCJre1D4v2nJ2U=,tag:KDhG88xcw5+6NRhgzCsnWw==,type:str]
         endpoint: ENC[AES256_GCM,data:Gj9URBvohQK/t0f+MYergunVyQib+ULJ/lXKLChLVarN2gzol231EYx63G6Y4ZhP+Eaf5puH3t1c8R8xxULwsMU=,iv:WxPbFOv9te1XlcHV0kU3+bDRLFYmMV3hOqx7eLR7PrY=,tag:0U2Avjyrw9u2yO+hcuvq+w==,type:str]
         region: ENC[AES256_GCM,data:ArhI5g==,iv:7rBtwb9dpEDEhtdHgZRkssIt9/SnB8cBNh3W56g3GJc=,tag:KyB2mkaxy4nXvEWl+j2K4w==,type:str]
+github:
+    webhook_secret: ENC[AES256_GCM,data:nDO0HWaXPnwvvMDzi90uWKNtIVPE4u3r,iv:pOMMz8V47XFBOQFaFwmjhuJRS8qSLGewRK7cbmASzdo=,tag:03LVHHfbr6+NjSUuj0zVwA==,type:str]
+    api_token: ENC[AES256_GCM,data:8JJqWaTlCOce4A7l+6qTv8PHKo6GZOiAAthJymHzzaksmcvxEadQBQ==,iv:PxZtgI+T/S0cSt87hDJOGafav0pAPmeiSz9IkQU5fmw=,tag:P9mrfbnhboS5KSCd08ZEQg==,type:str]
 sops:
     age:
         - recipient: age1fs48f8rw9gj49ss5fapsy8euqln0dtrc5yg35fuq7c930jtkveps2swvt6
@@ -88,7 +91,7 @@ sops:
             TDIrYjROQUdGMys0UQqpbP9Dqgh6xtHWgz2kyLTC2eG/JYQHqZwRRofZe5Tka/sI
             YqvO+i0ET/XmI/FfzFGZKcR4cRzLXS67xNwq2e9r
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-25T17:00:08Z"
-    mac: ENC[AES256_GCM,data:dBOVXS0IR1z0fdsRMQLIohQchkcjsmfdoeop3m1u2h4liT0XkzjCqkeZByr5RKJOH5piXotVwyVZaHUz/X6NDm84CnKliPN9kQkst7Tlz44Hq8oaLK3mS+XhPOaxX/WpJTecq2DI6sKpOzLSt5k3KidKvTgnucZp1Bv1Hfk2NSY=,iv:wDn0FRODoOhg6z8cZm5ZeHy5qVpidx/DFhtL9j/SHbY=,tag:GdEoQ/YbN1lBrycCsuvBVw==,type:str]
+    lastmodified: "2026-01-27T06:56:50Z"
+    mac: ENC[AES256_GCM,data:duPKjTfJfWQmrf41zDgfNncwN7MqsceDmb7vIh0zJIuf35U5z/Fwes1jPC4d+WGcyqJpn3QjAK1F3VXbu8k7D4zJfLHUAOC+BopA2WTJkDpx0bZb94vTpe3XKJnNLckG5LRtC+BiNjZ60fClVUXo6HxIieHtT+cHjSF55RdyasQ=,iv:Cucu+a95ArFDI4/rK6I1qcFVCBnwuOHZaAMyIQJ4X+Y=,tag:QB44N8K1OcjVZalXtmyilA==,type:str]
     unencrypted_suffix: _unencrypted
     version: 3.11.0
