✨Use traefik ingressroute instead of ingress to support grpc

--- a/deploy/k8s/components/argocd/helmfile.yaml
+++ b/deploy/k8s/components/argocd/helmfile.yaml
@@ -28,6 +28,9 @@ releases:
     chart: argo/argo-cd
     version: ~9.3.6
     createNamespace: true
+    disableValidationOnInstall: true
+    needs:
+      - traefik/traefik
     values:
       - values-argocd.yaml.gotmpl
 
