--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -304,7 +304,7 @@ jobs:
           chmod 600 ~/.config/sops/age/keys.txt
           echo "::endgroup::"
 
-          echo "::group::Instaling tenv"
+          echo "::group::Installing tenv"
           TENV_LATEST_VERSION=$(curl --silent https://api.github.com/repos/tofuutils/tenv/releases/latest | jq -r .tag_name)
           curl -O -L "https://github.com/tofuutils/tenv/releases/latest/download/tenv_${TENV_LATEST_VERSION}_amd64.deb"
           sudo dpkg -i "tenv_${TENV_LATEST_VERSION}_amd64.deb"
@@ -313,6 +313,13 @@ jobs:
           echo "::group::Installing terraform ($tf_version) and terragrunt ($tg_version)"
           tenv tf install $tf_version
           tenv tg install $tg_version
+          echo "::endgroup::"
+
+          echo "::group::Installing sops"
+          SOPS_LATEST_VERSION=$(curl --silent https://api.github.com/repos/getsops/sops/releases/latest | jq -r .tag_name)
+          curl -sLo sops -L https://github.com/getsops/sops/releases/download/${SOPS_LATEST_VERSION}/sops-${SOPS_LATEST_VERSION}.linux.amd64
+          chmod +x sops
+          sudo mv sops /usr/local/bin/sops
           echo "::endgroup::"
 
           echo "::group::Running terragrunt module with instance creation"
